--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header {
     background-color: #21D4FD;
     background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
     color: white;
-    padding: 3rem;
+    padding: 1rem;
 }
 h1 {
     margin: 0;
@@ -21,4 +21,10 @@ footer {
 }
 .github-logo path {
     fill: #B721FF;
+}
+
+@media (min-width: 768px) {
+    header {
+        padding: 3rem;
+    }
 }
